<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/camera_overlay_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <ProgressBar
            style="@android:style/Widget.ProgressBar"
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:id="@+id/linear_layout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone">

                <Button
                    android:id="@+id/btn_rotate_object"
                    android:text="@string/btn_rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_scale_object"
                    android:text="@string/btn_scale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_clear"
                    android:text="@string/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </LinearLayout>
        
</RelativeLayout>